# Sofamote

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  tsconfig.base.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_improvement.yml  install_compatibility_report.yml  streaming_profile_request.yml
.github/workflows/: ci.yml  release.yml
client/: index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  FullControlUI.tsx  RemoteUI.tsx  SettingsContext.tsx  SettingsUI.tsx  TrackpadUI.tsx  haptics.ts  main.tsx  pairing.ts  settings.ts  styles.css  types.ts  useInterfaceSelection.ts  useSocket.ts
docs/: RUST_GUIDE.md
docs/screenshots/: README.md
scripts/: release.mjs
server/: Cargo.toml  build.rs  package.json
server/assets/: remote-media-control.desktop  sofamote.desktop
server/src/: autolaunch.rs  autolaunch.ts  config.rs  config.ts  http.rs  http.ts  icons.ts  index.ts  keystrokes.rs  keystrokes.ts  main.rs  net.rs  net.ts  pairing.ts  power.rs  profiles.rs  profiles.ts  single_instance.rs  state.rs  state.ts  tray.rs  tray.ts  types.rs  types.ts  ws.rs  ws.ts
server/wix/: License.rtf  main.wxs
