[package]
name = "remote-media-control"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "remote-media-control"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
axum         = { version = "0.7",  features = ["ws"] }
tower-http   = { version = "0.5",  features = ["fs"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
enigo        = "0.2"
tray-icon    = "0.14"
muda         = "0.13"
qrcode       = "0.14"
image        = { version = "0.25", features = ["png"] }
local-ip-address = "0.6"
rand         = "0.8"
hex          = "0.4"
dirs         = "5"
subtle       = "2"
open         = "5"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
png = "0.17"
