[package]
name = "sofamote"
version = "0.3.2"
edition = "2021"
authors = ["Joseph Odeh <odeh.joseph@gmail.com>"]
description = "Phone remote for laptop media"
license = "MIT"
homepage = "https://github.com/oudajosefu/remote-media-control"
repository = "https://github.com/oudajosefu/remote-media-control"

[[bin]]
name = "sofamote"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
tray-icon = "0.14"
muda = "0.13"
qrcode = "0.14"
image = { version = "0.25", features = ["png"] }
local-ip-address = "0.6"
rand = "0.8"
hex = "0.4"
dirs = "5"
subtle = "2"
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
png = "0.17"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Sofamote"
identifier = "com.sofamote"
icon = ["assets/icon-active.png"]
category = "public.app-category.utilities"
copyright = "Copyright (c) 2026 Joseph Odeh"
short_description = "Phone remote for laptop media"
long_description = """
Phone remote for controlling video playback on a laptop over the local network.
Sofamote serves a phone-friendly PWA and translates taps into OS-level media
keystrokes for the focused browser window.
"""
osx_minimum_system_version = "12.0"
osx_info_plist_additional = { "LSUIElement" = "1" }

[package.metadata.deb]
name = "sofamote"
maintainer = "Joseph Odeh <odeh.joseph@gmail.com>"
copyright = "2026, Joseph Odeh"
depends = "$auto"
extended-description = """Phone remote for controlling video playback on a laptop over the local network.
Sofamote serves a phone-friendly PWA and translates taps into OS-level media keystrokes for the focused browser window."""
section = "utils"
assets = [
  [
    "target/release/sofamote",
    "usr/bin/",
    "755",
  ],
  [
    "assets/sofamote.desktop",
    "usr/share/applications/",
    "644",
  ],
]
